# FoglioDicalcolo

./: CMakeLists.txt  Cell.cpp  Cell.h  Formula.cpp  Formula.h  MaxFormula.cpp  MaxFormula.h  MeanFormula.cpp  MeanFormula.h  MinFormula.cpp  MinFormula.h  Observer.h  Subject.h  SumFormula.cpp  SumFormula.h  main.cpp
Test/: CMakeLists.txt  CellTest.cpp  FormulaFixture.cpp  MaxFormulaTest.cpp  runAllTests.cpp
