cmake_minimum_required(VERSION 3.5)
project(FoglioDiCalcolo)

add_subdirectory(Test)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_PREFIX_PATH C:\\Qt\\5.7\\msvc2015_64\\lib\\cmake\\Qt5Widgets)
set(SOURCE_FILES main.cpp Observer.h Subject.h Cell.h Cell.cpp SumFormula.cpp SumFormula.h MaxFormula.cpp MaxFormula.h MinFormula.cpp MinFormula.h MeanFormula.cpp MeanFormula.h )
add_executable(FoglioDiCalcolo ${SOURCE_FILES})
find_package( Qt5Widgets REQUIRED )
target_link_libraries(FoglioDiCalcolo Qt5::Widgets)